# Ferros-IoT

./: .gitignore  README.md
Broker/: CMakeLists.txt
Broker/inc/: ConsoleLogger.h  EnvLoader.h  FileStorage.h  IHandler.h  MQTTSubscriber.h  MessageRouter.h
Broker/src/: MQTTSubscriber.cpp  MessageRouter.cpp  main.cpp
ferros/: CMakeLists.txt
ferros/cmake/: aebpf.cmake  userspace.cmake
ferros/ebpf/src/: cpu_usage.bpf.c
ferros/shared/inc/: EnvLoader.h  constants.h  events.h  types.h
ferros/userspace/attack-scripts/: CpuBurstStress.cpp  IoBurstStress.cpp  MemoryStress.cpp  ProcessStress.cpp  SchedulerStress.cpp
ferros/userspace/inc/analyzer/: AnalyzerRegistry.h  CpuAnalyzer.h  IAnalyzer.h  ProcessAnalyzer.h  SchedulerAnalyzer.h
ferros/userspace/inc/common/: IInsight.h  ISerializer.h  JsonSerializer.h  SPSCQueue.h  Serialize.h  TelemetryType.h
ferros/userspace/inc/core/: DataAuditor.h  Pipeline.h  loader.h
ferros/userspace/inc/insight/: BaseInsight.h  IInsight.h  InsightFactory.h
ferros/userspace/inc/intelligence/: BayesianBinaryClassifier.h  IIntelligence.h
ferros/userspace/inc/pipeline/: CorrelationBuilder.h  EBPFReader.h  IdentityBuilder.h  Pipeline.h  TraceBuilder.h
ferros/userspace/inc/publisher/: FrontendPublisher.h  IPublisher.h  LocalStorage.h  MQTTPublisher.h
ferros/userspace/inc/serializer/: ISerializer.h  (+1 more)
ferros/userspace/scenario/: GlobalConstraints.h  IScenario.h  NormalScenario.cpp  ScenarioRegistry.cpp  ScenarioRegistry.h  ScenarioRunner.cpp  ScenarioRunner.h  main.cpp  sim_generator
ferros/userspace/src/: main.cpp
(+47 files in other folders)
